--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,29 @@
 /* styles.css */
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400&display=swap");
 
 /* Otro CSS o configuraciones de Tailwind CSS */
-
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
- 
+/* Añade esto en tu archivo CSS */
+
 body {
   margin: 0;
-  background-color: rgb(250, 250, 250);
-  font-family: 'Jost', sans-serif;
+  background-color: #f5f5f5;
+  font-family: "Open Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #333333;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Montserrat", sans-serif;
 }
